# dperftest

./: .gitignore  CMakeLists.txt  Makefile  README.md  dperftest.cc  example_service.cc  gen.cc  perftest.cc
example/: example_simple_service.cc  gen_simple_data.cc  schema.h
example_opa/: example_opa_gen.cc  example_opa_stub.cc  policy.rego  schema.h
